@@ -1,3 +1,9 @@
+2007-09-04  Marcos David Marín Amador <MarcosMarin@gmail.com> 
+
+	* Gui/CodeGenerationPanel.cs, Compiler/GNUCompiler.cs: Change newlines into
+	  spaces from ExtraCompiler/LinkerArgs right before compilation so the
+	  newline and spaces are conserved when serializing the project.
+
 2007-09-03  Michael Hutchinson <m.j.hutchinson@gmail.com> 
 
 	* Gui/OutputOptionsPanel.cs, Gui/CodeGenerationPanel.cs,
